refactor: docs AuthController to yaml
